<resources>
    <string name="app_name">Rolique App</string>

    <!-- Activity welcome start-->
    <string name="activity_welcome_title">Welcome to Rolique</string>
    <!-- Activity welcome end-->

    <!-- Fragment sign up start-->
    <string name="activity_sign_up_title">Sign up</string>
    <!-- Fragment sign up end-->

    <!-- Fragment sign in start-->
    <string name="activity_sign_in_title">Sign In</string>
    <!-- Fragment sign in end-->

    <!-- Fragment login start-->
    <string name="activity_login_title_activity_login">Sign in</string>
    <string name="activity_login_email">Email</string>
    <string name="activity_login_password">Password</string>
    <string name="activity_login_error_invalid_email">This email address is invalid</string>
    <string name="activity_login_error_invalid_password">This password is too short</string>
    <string name="activity_login_error_invalid_confirm_password">Passwords are not the same</string>
    <string name="activity_login_error_incorrect_password">This password is incorrect</string>
    <string name="activity_login_error_field_required">This field is required</string>
    <string name="activity_login_button_sign_in">Sign In</string>
    <string name="activity_login_button_sign_up">Sign Up</string>
    <string name="activity_login_first_name">First name</string>
    <string name="activity_login_last_name">Last name</string>
    <string name="activity_login_confirm_password">Confirm password</string>
    <string name="activity_login_reset_password">Reset Password</string>
    <string name="activity_login_email_sent">You will receive email in a moment. Follow the instructions</string>
    <string name="activity_login_email_error">Something goes wrong. Check entered email address</string>
    <!-- Fragment login end-->

    <!-- Fragment chats start-->
    <string name="fragment_chats_title">Chats</string>
    <!-- Fragment chats end-->

    <!-- Fragment eat start-->
    <string name="fragment_eat_title">Food</string>
    <!-- Fragment eat end-->

    <!-- Fragment contacts start-->
    <string name="fragment_contacts_title">Contacts</string>
    <string name="fragment_contacts_search">Search</string>
    <!-- Fragment contacts end-->

    <!-- Fragment check in start-->
    <string name="fragment_check_in_title">Check in</string>
    <string name="fragment_check_in_check_in">Check in</string>
    <string name="fragment_check_in_remotely">Remotely</string>
    <string name="fragment_check_in_business">Business trip</string>
    <string name="fragment_check_in_day_off">Day off</string>
    <!-- Fragment check in end-->

    <!-- Activity new chat start-->
    <string name="activity_new_chat_title">New chat</string>
    <string name="activity_new_chat_chat_name">Chat name</string>
    <string name="activity_new_chat_error_empty_title">Please, text the title</string>
    <!-- Activity new chat end-->

    <!-- navigation menu start-->
    <string name="navigation_menu_check_in">Check in</string>
    <string name="navigation_menu_email">Email</string>
    <string name="navigation_menu_suggestions">Your Suggestions</string>
    <string name="navigation_menu_log_out">Log out</string>
    <string name="navigation_menu_settings">Settings</string>
    <!-- navigation menu end-->

    <!-- Activity navigation start-->
    <string name="activity_navigation_lack_connection">There is no internet connection</string>
    <string name="activity_navigation_check_in_successful">You successfully checked in with type:</string>
    <string name="activity_navigation_check_in_in_range">You are here and still did not check in!) Please check in!</string>
    <string name="activity_navigation_check_in_outside_range">You are not at office, but perhaps want to check in?)</string>
    <!-- Activity navigation end-->

    <!-- Activity profile start-->
    <string name="activity_profile_details_title">Profile</string>
    <string name="activity_profile_details_title_edit">Edit Profile</string>
    <string name="activity_profile_details_phone_number">Phone Number</string>
    <string name="activity_profile_details_social_profile">Social Profile</string>
    <string name="activity_profile_details_email">Email</string>
    <string name="activity_profile_details_info">Info</string>
    <string name="activity_profile_details_web_links">Web Links</string>
    <string name="activity_profile_details_address">Address</string>
    <string name="activity_profile_details_phone_numbers_title">Select Number</string>
    <string name="activity_profile_details_phone_numbers_error">Number is invalid</string>
    <string name="activity_profile_details_email_title">Select Email</string>
    <string name="activity_profile_details_email_error">Email is invalid</string>

    <!--Select bottom dialog start-->
    <string name="bottom_dialog_select_call">Call</string>
    <string name="bottom_dialog_select_mail">Email</string>
    <string name="bottom_dialog_select_open_link">Open Link</string>
    <string name="bottom_dialog_select_share">Share</string>
    <string name="bottom_dialog_select_copy">Copy</string>
    <!--Select bottom dialog end-->

    <!--Select bottom dialog start-->
    <string name="bottom_dialog_add_key_hint">Set new custom key</string>
    <string name="bottom_dialog_add_value_hint">Set Value</string>
    <string name="bottom_dialog_add_save">SAVE</string>
    <string name="bottom_dialog_add_cancel">CANCEL</string>
    <string name="bottom_dialog_OK">Ok</string>
    <!--Select bottom dialog end-->
    <!-- Activity profile end-->

    <!-- activity imageViewer start-->
    <string name="activity_image_viewer_alert_title">Delete</string>
    <string name="activity_image_viewer_alert_body">Remove photo?</string>
    <string name="activity_image_viewer_positive_button">OK</string>
    <string name="activity_image_viewer_negative_button">Cancel</string>
    <string name="activity_image_viewer_network_error">No connection</string>
    <string name="activity_image_viewer_network_retry">Retry</string>
    <!-- activity imageViewer end-->

    <!-- activity timesheetViewer start-->
    <string name="activity_timesheet_viewer_title">Timesheet</string>
    <string name="activity_timesheet_viewer_user_column">User Name</string>
    <string name="activity_timesheet_viewer_table_title">Timesheet table\'s range</string>
    <string name="activity_timesheet_viewer_late">Check in Late</string>
    <string name="activity_timesheet_viewer_day_off">Day off</string>
    <string name="activity_timesheet_viewer_remotely">Remotely</string>
    <string name="activity_timesheet_viewer_business_trip">Business Trip</string>
    <string name="activity_timesheet_viewer_ok">Check in OK</string>
    <!-- activity timesheetViewer end-->

    <string name="title_activity_maps">Map</string>

    <!--fragment settings start-->
    <string name="fragment_settings_title">Settings</string>
    <string name="fragment_settings_alarm_service_id">AlarmService</string>
    <string name="fragment_settings_alarm_text">Current check in notifications time</string>
    <string name="fragment_settings_alarm_time_table_title">Set check in notifications time</string>
    <string name="fragment_settings_alarm_button_text">Change time</string>
    <string name="fragment_settings_alarm_confirm">Notifications time was changed</string>
    <string name="fragment_settings_alarm_header_text">Notification settings</string>
    <string name="fragment_settings_profile_header_text">My profile</string>
    <string name="fragment_settings_profile_edit">Edit</string>
    <!--fragment settings end-->

    <!--receiver alarm start-->
    <string name="alarm_receiver_message">Hey! It\'s time to check in!</string>
    <string name="alarm_receiver_remind_button">Remind in 10 mins</string>
    <!--receiver alarm end-->

    <!--dialog check in start-->
    <string name="dialog_check_in_title">Check in</string>
    <string name="dialog_check_button_remotely">Remotely</string>
    <string name="dialog_check_button_late">Late</string>
    <string name="dialog_check_text_view_time">Set Time</string>
    <string name="dialog_check_text_view_location">Use My Location</string>
    <string name="dialog_check_late_message">Hi everyone! I will come at </string>
    <string name="dialog_check_in_confirm">Confirm</string>
    <!--dialog check in end-->

    <!--activity user check in statistic start-->
    <string name="activity_user_check_in_statistic_title">Check in statistics</string>
    <string name="activity_user_check_in_statistic_header_weekly">Last week check ins statistics for </string>
    <string name="activity_user_check_in_statistic_header_all_time">Check ins statistics for </string>
    <string name="activity_user_check_in_statistic_switcher_weekly">Last week</string>
    <string name="activity_user_check_in_statistic_switcher_all_time">Last month</string>
    <string name="activity_user_check_in_statistic_chart_title">Delayed statistics for\n</string>
    <string name="activity_user_check_in_statistic_late">Late</string>
    <string name="activity_user_check_in_statistic_results">Results</string>
    <string name="activity_user_check_in_statistic_chart_title_empty">Delayed statistics is empty for\n</string>
    <string name="activity_user_check_in_statistic_missed_per_week">Missed per week</string>
    <string name="activity_user_check_in_statistic_missed_per_month">Missed per month</string>
    <!--activity user check in statistic end-->

    <!--fragment reason start-->
    <string name="fragment_reason_dialog_header">Reason for late</string>
    <string name="fragment_reason_dialog_title_hint">Notes (Optional)</string>
    <!--fragment reason end-->
</resources>
