<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_chats"
        android:background="?selectableItemBackground"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/fragment_chats_title"/>
    <item
        android:id="@+id/menu_contacts"
        android:background="?selectableItemBackground"
        android:icon="@drawable/ic_contacts_black_24dp"
        android:title="@string/fragment_contacts_title"/>
    <!--<item-->
        <!--android:id="@+id/menu_eat"-->
        <!--android:background="?selectableItemBackground"-->
        <!--android:icon="@drawable/ic_local_bar_black_24dp"-->
        <!--android:title="@string/fragment_eat_title"/>-->
    <item
        android:id="@+id/menu_check_in"
        android:background="?selectableItemBackground"
        android:icon="@drawable/ic_my_location_black_24dp"
        android:title="@string/navigation_menu_check_in"/>
    <item
        android:id="@+id/menu_settings"
        android:background="?selectableItemBackground"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/fragment_settings_title"/>
    <item
        android:id="@+id/menu_suggestions"
        android:background="?selectableItemBackground"
        android:icon="@drawable/ic_help_outline_black_24dp"
        android:title="@string/navigation_menu_suggestions"/>
</menu>