<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="264dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <io.rolique.roliqueapp.widget.DrawableTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        app:drawableLeftCompat="@drawable/ic_my_location_black_24dp"
        android:text="@string/dialog_check_in_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"/>

    <io.rolique.roliqueapp.widget.DrawableTextView
        android:id="@+id/drawable_text_view_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="16dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/black_alpha_50"
        tools:text="@string/activity_navigation_check_in_in_range"/>

    <LinearLayout
        android:id="@+id/container_check_ins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/text_view_check_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:selectableItemBackground"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/dialog_check_in_title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/grey_500"/>

        <TextView
            android:id="@+id/text_view_remotely"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:foreground="?android:selectableItemBackground"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/activity_timesheet_viewer_remotely"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/grey_500"/>

        <TextView
            android:id="@+id/text_view_business"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:foreground="?android:selectableItemBackground"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/activity_timesheet_viewer_business_trip"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/grey_500"/>

        <TextView
            android:id="@+id/text_view_day_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:foreground="?android:selectableItemBackground"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/activity_timesheet_viewer_day_off"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/grey_500"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/bottom_dialog_add_cancel"
            android:foreground="?selectableItemBackground"
            android:textColor="@color/colorPrimary"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:foreground="?selectableItemBackground"
            android:text="@string/bottom_dialog_OK"
            android:textColor="@color/colorPrimary"
            tools:ignore="ButtonStyle"/>

    </LinearLayout>
</LinearLayout>