<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:background="@color/white">

    <io.rolique.roliqueapp.widget.DrawableTextView
        android:id="@+id/text_view_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="16dp"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/bottom_dialog_select_mail"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textColor="@color/grey_600"
        android:textStyle="bold"
        android:visibility="gone"
        app:drawableTopCompat="@drawable/ic_email_grey_36dp"
        tools:visibility="visible"/>

    <io.rolique.roliqueapp.widget.DrawableTextView
        android:id="@+id/text_view_call"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="16dp"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/bottom_dialog_select_call"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textColor="@color/grey_600"
        android:textStyle="bold"
        android:visibility="gone"
        app:drawableTopCompat="@drawable/ic_phone_grey_36dp"
        tools:visibility="visible"/>

    <io.rolique.roliqueapp.widget.DrawableTextView
        android:id="@+id/text_view_open_link"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="16dp"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/bottom_dialog_select_open_link"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textColor="@color/grey_600"
        android:textStyle="bold"
        android:visibility="gone"
        app:drawableTopCompat="@drawable/ic_open_in_new_grey_36dp"
        tools:visibility="visible"/>

    <io.rolique.roliqueapp.widget.DrawableTextView
        android:id="@+id/text_view_copy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="16dp"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/bottom_dialog_select_copy"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textColor="@color/grey_600"
        android:textStyle="bold"
        android:visibility="gone"
        app:drawableTopCompat="@drawable/ic_content_copy_grey_36dp"
        tools:visibility="visible"/>

    <io.rolique.roliqueapp.widget.DrawableTextView
        android:id="@+id/text_view_share"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="16dp"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/bottom_dialog_select_share"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textColor="@color/grey_600"
        android:textStyle="bold"
        android:visibility="gone"
        app:drawableTopCompat="@drawable/ic_share_grey_36dp"
        tools:visibility="visible"/>
</LinearLayout>