<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <include layout="@layout/content_toolbar_back"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center"
            android:padding="16dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            tools:text="nf3 pui3 3npui3 4ui3ekl gnrge oewnrgoerngoenrgonergoner gne rgnergnerngergn4"/>

        <TextView
            android:id="@+id/text_view_switcher"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="16dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            tools:text="@string/activity_user_check_in_statistic_switcher_weekly"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_missed_per_week"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            tools:text="@string/activity_user_check_in_statistic_missed_per_week"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/text_view_missed_per_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            tools:text="@string/activity_user_check_in_statistic_missed_per_month"
            android:visibility="gone"/>
    </LinearLayout>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/chart1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>